# PPO_drone_Gazebo_ROS2

./: .gitmodules  SPAWNING_ISSUE_DEBUG.md  requirements.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/drive_drone/lib/drive_drone/: p1_a_drive_node  p1_b_tb3_follower  tb3_circle_mover  tb3_road_network_mover
install/drive_drone/share/drive_drone/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/drive_drone/share/drive_drone/cmake/: drive_droneConfig-version.cmake  drive_droneConfig.cmake
install/mml_guidance/lib/mml_guidance/: boundary_safety_test  boundary_visualization  guidance  markov_goal_pose  mml_pf_visualization  rl_gazebo_multi_tracker  rl_gazebo_tracker  rl_tracker  turtlebot_pid_controller
install/mml_guidance/share/mml_guidance/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sjtu_drone_bringup/share/sjtu_drone_bringup/: package.sh  package.xml
install/sjtu_drone_control/share/sjtu_drone_control/: package.sh  package.xml
install/sjtu_drone_description/include/sjtu_drone_description/: pid_controller.h  plugin_drone.h  plugin_drone_private.h
install/sjtu_drone_description/share/sjtu_drone_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/drive_drone/: CMakeLists.txt  DUAL_TB3_README.md  QUICK_START.md  README.md  visualize_dual_tb3.py
src/drive_drone/src/: p1_b_tb3_follower.cpp  tb3_follower_node.cpp  tb3_road_network_mover.cpp
(+37 files in other folders)
